Add config files for Intellij to format the code the same as Eclipse.  Also re-formatted all source code.